--- a/project.config
+++ b/project.config
@@ -4,3 +4,8 @@
 	inheritFrom = domain-multimedia
 [project]
 	state = active
+	description = "Domain: Multimedia;"\n\
+"Maintainers: Jonghyuk Choi,Yan Y Zhang;"\n\
+"Integrators: Byungwook Jang;"\n\
+"Licenses: Apache-2.0,Apache;"\n\
+
