[Release version 0.2.20] Remove unnecessary dependency - libmm-camcorder, GStreamer
Change-Id: Ib1ef5b43055ab18e66447be2802065d21b44abe7
Signed-off-by: Jeongmo Yang <jm80.yang@samsung.com>

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,7 +5,7 @@ SET(fw_test "${fw_name}-test")
 #link_directories(${CMAKE_SOURCE_DIR}/../)
 
 INCLUDE(FindPkgConfig)
-pkg_check_modules(${fw_test} REQUIRED mm-camcorder elementary evas)
+pkg_check_modules(${fw_test} REQUIRED elementary evas)
 FOREACH(flag ${${fw_test}_CFLAGS})
     SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
     MESSAGE(${flag})
