Project settings updated

--- a/project.config
+++ b/project.config
@@ -3,8 +3,4 @@
 [access]
 	inheritFrom = scm/acls/domain_multimedia/media_camera
 [project]
-	description = "Domain: Multimedia;"\n\
-"Maintainers: Jonghyuk Choi,Yan Y Zhang;"\n\
-"Integrators: Byungwook Jang;"\n\
-"Licenses: Apache-2.0,Apache;"\n\
-
+	description = "Domain: Multimedia / Media Camera;"
